# calewood-toolbox

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  API_REFERENCE.md  DEPRECATED.md  Dockerfile  README.md  check_archiviste.sh  check_qbit_vs_calewood.sh  pyproject.toml
calewood_qbit_sync/: calewood.py  cli.py  config.py  qbit.py
calewood_toolbox/: __init__.py  __main__.py  calewood.py  cli.py  config.py  qbit.py
docs/: CONTRATS_API.md  GUIDE-prendre-n-archives.md  GUIDE_prendre_un_budget_gib.md  SCENARIO_archives_take_smallest_et_budget.md  SCENARIO_prearchivage_take_budget.md  SCENARIO_prendre_uploads_selected.md
