[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calewood-toolbox"
version = "0.1.0"
description = "Anonymized CLI toolbox for Calewood + qBittorrent automation."
requires-python = ">=3.11"
dependencies = [
  "qbittorrent-api>=2024.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
calewood-toolbox = "calewood_qbit_sync.cli:main"

[tool.setuptools]
packages = ["calewood_qbit_sync"]
